Added delete request in privacy.

--- a/privacy.html
+++ b/privacy.html
@@ -100,5 +100,18 @@
         <p><strong>App:</strong> Fortun-AI</p>
         <p><strong>Last Updated:</strong> December 2024</p>
     </div>
+    <h2 id="account-deletion">12. Account Deletion</h2>
+    <p>You have the right to delete your account and all associated data at any time. To request account deletion:</p>
+    <ul>
+        <li><strong>In-App:</strong> Go to Settings > Account > Delete Account</li>
+        <li><strong>Email:</strong> Contact us at privacy@fortun-ai.com with "Account Deletion Request" in the subject line</li>
+    </ul>
+    <p>Upon account deletion:</p>
+    <ul>
+        <li>All your personal information will be permanently deleted within 30 days</li>
+        <li>Your fortune reading history will be removed</li>
+        <li>This action cannot be undone</li>
+    </ul>
+    <p>Some information may be retained for legal compliance or fraud prevention as required by law.</p>
 </body>
 </html>
